Fix min-height and layout issues

--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -66,6 +66,7 @@ body {
 }
 
 main {
+  min-height: calc(100% - #{$footer-height});
   background-color: $body-background-color;
 }
 
