--- a/src/assets/sass/_home.scss
+++ b/src/assets/sass/_home.scss
@@ -144,7 +144,7 @@
   }
 
   @include mq(lg) {
-    top: -90px;
+    top: -80px;
     right: auto;
     left: -50%;
   }
