--- a/src/assets/sass/_site-footer.scss
+++ b/src/assets/sass/_site-footer.scss
@@ -1,4 +1,5 @@
 .siteFooter {
   color: $white;
   background-color: $pure-black;
+  height: $footer-height;
 }
