--- a/src/assets/sass/support/variables/spacing.scss
+++ b/src/assets/sass/support/variables/spacing.scss
@@ -31,3 +31,4 @@ $sp-11: map-get($spacers, "sp-11");
 $sp-12: map-get($spacers, "sp-12");
 
 $page-padding-top: $spacer-width * 11;
+$footer-height: $sp-6;
